--- a/workflows/misc_file_types/netCDF_chunk.Rmd
+++ b/workflows/misc_file_types/netCDF_chunk.Rmd
@@ -1,6 +1,6 @@
 ## NetCDFs
 
-This section is for dealing with NetCDF (.nc) files. These files require *data tables* but since they can not be simply opened on the computer using a text editor or Excel, you can use Panoply to explore them or the R commands. 
+This section is for dealing with NetCDF (.nc) files. These files require *data tables* but since they can not be simply opened on the computer using a text editor or Excel, you can use Panoply to explore them or the R commands. However, notice that not all NetCDF files have the attribute table information. 
 
 ```{r, eval=FALSE}
 library(ncdf4)
@@ -16,7 +16,7 @@ The "long_name" can be used to build a definition.
 
 The "units" can be used for either units or the enumerated domain codes.
 
-The "_FillValue" is a missing value code it looks like
+The "_FillValue" is a missing value code it looks like.
 
 ```{r, eval=FALSE}
 # returns the actual values for a specified attribute
