--- a/workflows/pi_correspondence/email_templates/C_additional_email_templates.Rmd
+++ b/workflows/pi_correspondence/email_templates/C_additional_email_templates.Rmd
@@ -10,6 +10,22 @@ If the PI needs a DOI right away:
 
 > We can provide you with a pre-assigned DOI that you can reference in your paper, as long as your submission is not facing a deadline from NSF for your final report. However, please note that it will not become active until after we have finished processing your submission and the package is published. Once you have your dataset published, we would appreciate it if you could send us the DOI of your published paper. We are working to build our catalog of dataset citations in the Arctic Data Center.
 
+#### Replacing data files
+The data files can be replaced by going to the green Edit button > Click the black triangle by the Describe button for the data file > Select Replace (attached is also a screenshot on how to get there).
+![]("../../images/replace_file.png")
+
+#### Recovering Dataset submissions
+To recover dataset submissions that were not successful please do the following:
+
+Go to https://arcticdata.io/catalog/drafts
+Find your dataset and download the corresponding file
+Send us the file in an email
+
+#### Custom Search Link
+You could also use a permalink like this to direct users to the datasets:
+https://arcticdata.io/catalog/data/query="your search query here"
+for example: https://arcticdata.io/catalog/data/query=Beaufort%20Lagoon%20Ecosystems%20LTER
+
 #### Adding metadata via R
 
 >KNB does not support direct uploading of EML metadata files through the website (we have a webform that creates metadata), but you can upload your data and metadata through R.
