--- a/workflows/pi_correspondence/email_templates/A_initial_email_template.Rmd
+++ b/workflows/pi_correspondence/email_templates/A_initial_email_template.Rmd
@@ -28,7 +28,15 @@ Does not use acronyms
 
 Describes DATA in package (ideally > 100 words)
 
-> We would like to add some additional context to your abstract. [ADJUST THE SENTENCE DEPENDING ON WHAT IS MISSING - It should provide an overview of the scientific context/ project/ hypotheses, how this data package fits into the larger project, a synopsis of the experimental or sampling design, and a summary of the data contents.] If you prefer and it is appropriate, we could add language from the abstract in the NSF Award found here: [NSF AWARD URL].
+> We would like to add some additional context to your abstract. We hope to add the following: [ADJUST THE DEPENDING ON WHAT IS MISSING]
+    - The motivation (purpose) of the study
+    - Where and when the research took place
+    - At least one sentence summarizing general methodologies
+    - All acronyms are defined
+
+Offer this if submitter is reluctant to change:
+
+> If you prefer and it is appropriate, we could add language from the abstract in the NSF Award found here: [NSF AWARD URL].
 
 #### Data
 
@@ -47,7 +55,7 @@ Open formats
 
 Zip files
 
->Except for very specific file types, we do not recommend that data are archived in zip format. Data that are zipped together can present a barrier to reuse since it is difficult to accurately document each file within the zip file in a machine readable way.
+> Except for very specific file types, we do not recommend that data are archived in zip format. Data that are zipped together can present a barrier to reuse since it is difficult to accurately document each file within the zip file in a machine readable way.
 
 File contents and relationships among files are clear
 
@@ -62,12 +70,13 @@ We try not to prescribe a way the researchers must format their data as long as 
 > I noticed that your data package has incomplete attribute/variable information. [SPECIFY WHAT YOU WANT ADDED] You can do so by navigating to your dataset [INSERT URL HERE], clicking the green "Edit" button, clicking the "Describe" button located to the right of each of your files at the top of the submission page, and in the window that pops up click over to the "Attributes" tab. Please see the guidance below for what attribute/variable information should contain.
 
 Checklist for the datateam in reviewing attributes (NetCDF, CSV, shapefiles, or any other tabular datasets):
-> - A name (often the column or row header in the file).
-> - A complete definition.
-> - Any missing value codes along with explanations for those codes.
-> - For all numeric data, unit information is needed.
-> - For all date-time data, a date-time format is needed (e.g. "DD-MM-YYYY").
-> - For text data, full descriptions for all patterns or code/definition pairs are needed if the text is constrained to a list of patterns or codes.
+
+- A name (often the column or row header in the file).
+- A complete definition.
+- Any missing value codes along with explanations for those codes.
+- For all numeric data, unit information is needed.
+- For all date-time data, a date-time format is needed (e.g. "DD-MM-YYYY").
+- For text data, full descriptions for all patterns or code/definition pairs are needed if the text is constrained to a list of patterns or codes.
 
 > Could you describe ____? 
 > Please define “XYZ”, including the unit of measure. 
@@ -87,11 +96,14 @@ All NSF funded datasets need a funding number. Non-NSF funded datasets might not
 
 #### Methods
 
-Submissions should:
+We noticed that methods were missing from the submission. Submissions should:
+
 - provide instrument names (if applicable)
 - specify how sampling locations were chosen
 - provide citations for sampling methods that are not explained in detail
-- this includes software submissions as well (see <a href = 'https://arcticdata.io/submit/#metadata-guidelines-for-software' target='_blank'>https://arcticdata.io/submit/#metadata-guidelines-for-software</a>)
+- any software used to process the data
+
+*Note* - this includes software submissions as well (see <a href = 'https://arcticdata.io/submit/#metadata-guidelines-for-software' target='_blank'>https://arcticdata.io/submit/#metadata-guidelines-for-software</a>)
 
 > Your methods section appears to be missing some information. [ADJUST THIS DEPENDING ON WHAT IS MISSING - Users should be able to understand how the data were collected, how to interpret the values, and potentially how to use the data in the case of specialized files.]
 
