--- a/workflows/edit_eml/edit_semantic_annotation.Rmd
+++ b/workflows/edit_eml/edit_semantic_annotation.Rmd
@@ -1,10 +1,11 @@
 # Semantic annotations
 
-The training will cover an overview of what areas we usually will need to update. For more information on how to add semantic annotations to EML 2.2.0 can be found [here](https://eml.ecoinformatics.org/semantic-annotation-primer.html)
+The training will cover an overview of what areas we usually will need to update. For more information on how to add semantic annotations to EML 2.2.0 can be found
+ <a href = 'https://eml.ecoinformatics.org/semantic-annotation-primer.html'>here</a>. Currently metacatUI does not support the editing of semantic annotations on the website so all changes will have to be done in R.
 
 ## How annotations are used
 
-This is a [dataset](https://arcticdata.io/catalog/view/doi%3A10.18739%2FA2KW57J9Q) that have semantic annotations included.
+This is a  <a href = 'https://arcticdata.io/catalog/view/doi%3A10.18739%2FA2KW57J9Q'>dataset</a> that have semantic annotations included.
 
 On the website you can see annotations in each of the attributes.
 ![]("../images/anotations_web.png")
@@ -18,7 +19,6 @@ To add annotations to the `attributeList` you will need information about the `p
 ```{r eval=FALSE}
 doc$dataset$dataTable[[i]]$attributeList$attribute[[i]]$annotation
 ```
-
 ```
 $id
 [1] "ODBcOyaTsg"
@@ -37,19 +37,13 @@ $valueURI$label
 
 $valueURI$valueURI
 [1] "http://purl.dataone.org/odo/ECSO_00002617"
-```
-
-```{r}
-doc$dataset$dataTable[[1]]$attributeList$attribute[[3]]$annotation$propertyURI
-
-doc$dataset$dataTable[[1]]$attributeList$attribute[[3]]$annotation$valueURI
-```
+```ß
 
 ## Ontologies used
 
-### [OBOE: The Extensible Observation Ontology](https://github.com/NCEAS/oboe)
+### OBOE: The Extensible Observation Ontology
 
-This ontology covers the following:
+This <a href = 'https://github.com/NCEAS/oboe'>OBOE ontology</a> covers the following:
 
 - **Observation**: an event in which one or more measurements are taken
 Measurement: the measured value of a property for a specific object or phenomenon (e.g., 3.2)
@@ -58,4 +52,4 @@ Measurement: the measured value of a property for a specific object or phenomeno
 Standard: units and controlled vocabularies for interpreting measured values (e.g., g/cm^3)
 - **Protocol**: the procedures followed to obtain measurements (e.g., DensityProtocol2014)
 
-All the classes can be found [on bioPortal](https://bioportal.bioontology.org/ontologies/OBOE/?p=classes). You will need the ID (`propertyURI`) and the label from the relevant entry. If you are unsure, ask Jasmine or Jeanette about what appropriate annotations to use.
+All the classes can be found <a href = 'https://bioportal.bioontology.org/ontologies/OBOE/?p=classes'>on bioPortal</a>. You will need the ID (`propertyURI`) and the label from the relevant entry. If you are unsure, ask Jasmine or Jeanette about what appropriate annotations to use.
