--- a/training/index.Rmd
+++ b/training/index.Rmd
@@ -56,7 +56,7 @@ NCEAS hosts a number of events that you are encouraged to attend. Keep an eye on
     + potluck salad and socializing, bring a topping or side to share!
     + second Tuesday of the month, 12:15 in the lounge
     
-## NCEAS Community Meetings/ Groups
+## NCEAS Community Meetings/ Groups {-}
 
 Check out their inidividual calendar entries and channels for more information
 
@@ -65,7 +65,7 @@ Check out their inidividual calendar entries and channels for more information
 * NCEAS Diversity Team
 * NCEAS Book Club - #bookclub
 
-## Code of Conduct
+## Code of Conduct {-}
 
 Take a moment to review the [diversity and inclusion page](https://www.nceas.ucsb.edu/diversity-inclusion) and [code of conduct](https://live-ncea-ucsb-edu-v01.pantheonsite.io/sites/default/files/2020-02/NCEAS_Code-of-Conduct_2019.pdf) at NCEAS so that we can foster an environment that is safe, welcoming and inclusive for everyone.
     
