Updated 'publish_an_object.Rmd'. Creating metadata PID from EML was throwing an error using the first formatId in the training (formatId <- "eml://ecoinformatics.org/eml-2.2.0"). Updated to use formatId from DataONE Object Format List (https://cn.dataone.org/cn/v2/formats).

--- a/workflows/edit_data_packages/publish_an_object.Rmd
+++ b/workflows/edit_data_packages/publish_an_object.Rmd
@@ -10,7 +10,7 @@ formatId <- "text/csv"
 formatId <- "text/plain"
 
 # metadata file
-formatId <- "eml://ecoinformatics.org/eml-2.2.0"
+formatId <- "https://eml.ecoinformatics.org/eml-2.2.0"
 # OR
 formatId <- format_eml("2.2.0")
 ```
