--- a/workflows/edit_eml/edit_semantic_annotation.Rmd
+++ b/workflows/edit_eml/edit_semantic_annotation.Rmd
@@ -80,7 +80,12 @@ There are several ontologies to search in. In order of most to least likely to b
 * [Information Artifact Ontology (IAO)](http://bioportal.bioontology.org/ontologies/IAO/?p=summary)
     - this ontology contains terms related to information entities (eg: journals, articles, datasets, identifiers)
 
-To search, navigate through the "classes" until you find an appropriate term.
+To search, navigate through the "classes" until you find an appropriate term. When we are picking terms, it is important that we not just pick a similar term or a term that seems close -  we want a term that is totally "right". For example, if you have an attribute for carbon tetroxide flux and an ontology with a class hierarchy like this:
+
+-- carbon flux
+  |---- carbon dioxide flux
+
+Our exact attribute, carbon tetroxide flux is not listed. In this case, we should pick "carbon flux" as it's completely correct and not "carbon dioxide flux" because it's more specific but not quite right.
 
 **3. Build the annotation in R**
 
