--- a/workflows/edit_eml/edit_semantic_annotation.Rmd
+++ b/workflows/edit_eml/edit_semantic_annotation.Rmd
@@ -103,7 +103,7 @@ eml_get_simple(doc$dataset$dataTable[[3]]$attributeList, "attributeName")
 [19] "scan"         "sbeox0ML/L"   "sbeox0dOV/dT" "flag"    
 ```
 
-Next, assign an `id` to the attribute. It should be unique within the document, and it's nice if it is human readable and related to the attribute it is describing.
+Next, assign an `id` to the attribute. It should be unique within the document, and it's nice if it is human readable and related to the attribute it is describing. One format you could use is `entity_x_attribute_y` which should be unique in scope, and is nice and descriptive.
 
 ```{r, eval = F}
 doc$dataset$dataTable[[3]]$attributeList$attribute[[6]]$id <- "salinity_var"
