Minor typo fixes to 4.13

--- a/workflows/edit_eml/set_parties.Rmd
+++ b/workflows/edit_eml/set_parties.Rmd
@@ -23,7 +23,7 @@ JC_creator <- arcticdatautils::eml_creator(given_names = "Jeanette",
 doc$dataset$creator <- JC_creator
 ```
 
-Similarly, we can set the `contact`s. In this case, there are two, so we set `doc$dataset$contact` as a list containing both of them.
+Similarly, we can set a single `contact` or multiple. In this case, there are two, so we set `doc$dataset$contact` as a list containing both of them.
 
 ```{r, eval = FALSE}
 JC_contact <- arcticdatautils::eml_contact(given_names = "Jeanette", 
@@ -55,6 +55,6 @@ JG_ap <- arcticdatautils::eml_associated_party(given_names = "Jesse",
                                                phone = "123-456-7890",  
                                                address = NCEASadd, 
                                                userId = "https://orcid.org/WWWW-XXXX-YYYY-ZZZZ",
-                                               role = "metaataProvider")
+                                               role = "metadataProvider")
 doc$dataset$associatedParty <- JG_ap
 ```
