--- a/workflows/explore_eml/navigate_through_eml.Rmd
+++ b/workflows/explore_eml/navigate_through_eml.Rmd
@@ -7,7 +7,7 @@ library(dataone)
 library(EML)
 ```
 
-```{r, error = FALSE}
+```{r, error = FALSE, eval FALSE}
 # Need to be in this member node to explore file
 cn_staging <- CNode('STAGING')
 adc_test <- getMNode(cn_staging,'urn:node:mnTestARCTIC')
