--- a/workflows/edit_eml/set_project.Rmd
+++ b/workflows/edit_eml/set_project.Rmd
@@ -1,10 +1,10 @@
 ## Set the Project section 
 
-The project section in an EML document is automatically filled out by the metacatUI editor. It sets the project title and project personell to the submission's title and creators.  Most of the time at least some of this information is incorrect and we need to update it.  
+The project section in an EML document is automatically filled out by the metacatUI editor. It sets the project title and project personnel to the submission's title and creators.  Most of the time at least some of this information is incorrect and we need to update it.  
 
-Start by searching for the funding information using <a href = 'https://www.nsf.gov/awardsearch/' target='_blank'>NSF's award search</a>. This will give us the project title, abstract, and personell - along with some additional metadata.  
+Start by searching for the funding information using <a href = 'https://www.nsf.gov/awardsearch/' target='_blank'>NSF's award search</a>. This will give us the project title, abstract, and personnel - along with some additional metadata.  
 
-Using this information we will set the title, personell, and funding number. For NSF funded projects prepend the funding number with "NSF". If there are multiple awards associated with one dataset then additional `funding`, `title`, and `personell` elements should be added to reflect the additional awards.    
+Using this information we will set the title, personnel, and funding number. For NSF funded projects prepend the funding number with "NSF". If there are multiple awards associated with one dataset then additional `funding`, `title`, and `personnel` elements should be added to reflect the additional awards.    
 
 
 ```
