--- a/workflows/pi_correspondence/final_review_checklist.Rmd
+++ b/workflows/pi_correspondence/final_review_checklist.Rmd
@@ -34,6 +34,7 @@ doc <- eml_add_entity_system(doc)
 - **Variables** match what is in the file
 - **Measurement domain** - if appropirate (ie dateTime correct)
 - **Missing Value Code** - accounted for if applicable
+- **Semantic Annotation** - if applicable
 
 ### People
 - complete information for each person in each section
