--- a/workflows/pi_correspondence/email_templates/A_initial_email_template.Rmd
+++ b/workflows/pi_correspondence/email_templates/A_initial_email_template.Rmd
@@ -14,6 +14,11 @@
 > [YOUR NAME]
 
 ### Comment templates based on what is missing
+
+#### Dataset citations
+
+> If there is a publication associated with this dataset, we would appreciate it if you could send us the DOI of your published paper. We are working to build our catalog of dataset citations in the Arctic Data Center.
+
 #### Title
 
 Provides the *what, where, and when* of the data
