--- a/training/04_editing_eml.Rmd
+++ b/training/04_editing_eml.Rmd
@@ -94,6 +94,12 @@ update <- publish_update(adc_test,
 
 Note that there are other arguments to `publish_update()` you may need.
 
+The diagrams from the DataOne Community Meeting (Session 7) illustrate the dataset submission workflow explicitly.
+
+![](images/data-submission-workflow1.png)
+
+![](images/data-submission-workflow2.png)
+
 After your package is published, run the `qa_package()` function from the `datamgmt` package. 
 
 The function arguments are as follows:
