add eval = FALSE to fix the checking failure

--- a/workflows/edit_eml/edit_custom_units.Rmd
+++ b/workflows/edit_eml/edit_custom_units.Rmd
@@ -41,7 +41,7 @@ doc$additionalMetadata <-  list(metadata = list(unitList = unitlist))
 ```
 
 Sometimes you can meet the situation where the units that should be standard show up as custom. You can use the following code to fix this issue:
-```{r}
+```{r, eval = FALSE}
 # add standard unit
 doc$dataset$dataTable[[i]]$attributeList$attribute[[i]]$measurementScale$ratio$unit$standardUnit <- "your standard unit"
 
@@ -50,7 +50,7 @@ doc$dataset$dataTable[[i]]$attributeList$attribute[[i]]$measurementScale$ratio$u
 ```
 
 If you want to find all of the positions of a certain custom unit that should be standard, try this code:
-```{r}
+```{r, eval = FALSE}
 ls <- purrr::map(doc$dataset$dataTable[[i]]$attributeList$attribute, ~str_detect(.x$measurementScale$ratio$unit$customUnit, "your standard unit"))
 which(ls == TRUE)
 ```
