--- a/workflows/edit_eml/edit_custom_units.Rmd
+++ b/workflows/edit_eml/edit_custom_units.Rmd
@@ -40,7 +40,7 @@ unitlist <- set_unitList(custom_units, as_metadata = TRUE)
 doc$additionalMetadata <-  list(metadata = list(unitList = unitlist))
 ```
 
-Sometimes you can meet the situation where the units that should be standard show up as custom. You can use the following code to fix this issue:
+If units that should be `standardUnit` are added as `customUnit`, you can use the following code to fix this issue:
 ```{r, eval = FALSE}
 # add standard unit
 doc$dataset$dataTable[[i]]$attributeList$attribute[[i]]$measurementScale$ratio$unit$standardUnit <- "your standard unit"
@@ -51,6 +51,8 @@ doc$dataset$dataTable[[i]]$attributeList$attribute[[i]]$measurementScale$ratio$u
 
 If you want to find all of the positions of a certain custom unit that should be standard, try this code:
 ```{r, eval = FALSE}
-ls <- purrr::map(doc$dataset$dataTable[[i]]$attributeList$attribute, ~str_detect(.x$measurementScale$ratio$unit$customUnit, "your standard unit"))
+ls <- purrr::map(doc$dataset$dataTable[[i]]$attributeList$attribute, 
+                  ~str_detect(.x$measurementScale$ratio$unit$customUnit, "your standard unit"))
+                  
 which(ls == TRUE)
 ```
